--- a/chat-with-langchain-and-azure-openai.ipynb
+++ b/chat-with-langchain-and-azure-openai.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, install the latest packages `langchain` and `langchain-openai`"
+    "首先，安装并更新`langchain`、`langchain-openai`包"
    ]
   },
   {
@@ -21,14 +21,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, set the environment variables, which should include `AZURE_OPENAI_API_KEY`, `AZURE_OPENAI_ENDPOINT`, `OPENAI_API_VERSION`, and `AZURE_OPENAI_CHAT_DEPLOYMENT_NAME`."
+    "然后，设置这些环境变量：\n",
+    "- `AZURE_OPENAI_API_KEY`，`AZURE_OPENAI_ENDPOINT`：在你创建 Azure OpenAI 服务后，可以在“密钥和终结点”菜单下查看\n",
+    "- `OPENAI_API_VERSION`：在这里查看 [https://learn.microsoft.com/en-us/azure/ai-services/openai/reference](https://learn.microsoft.com/en-us/azure/ai-services/openai/reference)\n",
+    "- `AZURE_OPENAI_CHAT_DEPLOYMENT_NAME`：部署的模型名称"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an instance of AzureChatOpenAI called `model`, and pass the list of messages to the invoke method."
+    "接下来，实例化一个AzureChatOpenAI的对象，指定`openai_api_version`和`azure_deployment`两个参数。定义消息列表`messages`，包含系统信息和用户信息。调用`invoke`方法，访问LLM获得回应。"
    ]
   },
   {
@@ -54,14 +57,14 @@
     "]\n",
     "\n",
     "# call llm\n",
-    "result = model.invoke(messages)"
+    "model.invoke(messages)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Got it.\n",
+    "执行 `model.invoke(messages)` ，你大概会得到像下面这样的输出结果。\n",
     "```\n",
     "AIMessage(content='你好！', response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 22, 'total_tokens': 25}, 'model_name': 'gpt-35-turbo', 'system_fingerprint': None, 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run-a6ef502b-8b5d-4aab-8a5a-0678485e5d85-0')\n",
     "```"
@@ -71,9 +74,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above is an AIMessage object. Usually, we only need to extract the content property and display it to the user. \n",
+    "这是一个AIMessage结构的数据，通常，我们需要把 `content` 的内容解析出来，展示给用户。\n",
     "\n",
-    "Now let's extract the text content from the AIMessage object. "
+    "现在，让我们从 AIMessage 数据结构中提取`content`内容。"
    ]
   },
   {
@@ -82,7 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import `StrOutputParser`\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
     "parser = StrOutputParser()"
@@ -92,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's how we can modify the code to define a result variable to store the invocation result\n",
+    "修改调用代码\n",
     "\n",
     "```python\n",
     "result = model.invoke(messages)\n",
@@ -112,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "'你好!'"
+    "'你好!'。"
    ]
   }
  ],
